# medigram-back

./: API.md  Cargo.toml  README.md  dummy.sql  schema.sql
.sqlx/: query-079fa0dc433d7d7b977b46f94ebfb20ea5d4a256c70aef96aa2b8841fbdafdcc.json  query-0f4285ac1f87de58a747966d0b61d3168334bc59c647155d8acec62e1d2f0eff.json  query-1b52f4e9e4440c4339ecfdbc7082ae9680521d6296f0bff00ec0ad2df0409989.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-21bd1ad0d2f67b994bae015d83a63ae0543a1b807bd377ddba9662423b397225.json  query-22b744a4dc1fb32ad474e63908ed0754eefd6fcb4311fc60b78f0eb417590545.json  query-2557ad6a5d691d4fb9cec4f7cc25511d8ef0617d9201ee14dbcdf828ea4cc094.json  query-268afd3ea39ceedc44404254ca321076fe86264c59177262dc4ead5a4d904e93.json  query-2b983abda22f838c33d98875bc784158bc23f57afa5c1d6f0579515ce61f0593.json  query-32119cde8b6705f56d47e4435521701b581aeac963d1eb4fee82c46c62fff08e.json  query-3355b19a3443311645ac929ea7c23f1bd1d4db98421ca8f693ba913b9872ffa7.json  query-34b87f62fb7fcae2a1a5058b34ce3c69735a6a11c75349145416d4c0db7e99ec.json  query-36f450ee959e5848516cc8291bfb846ee3a648513b89dbda48566356a64b863c.json  query-375fb4ca9f681d1b1f97647dd8055cd774787f70df4aadfedfa464fee1447881.json  query-37dd5b4901dbe3c261653054bb3ee3dd0b2a92478224ec9bcaaac90d09b15ca7.json  query-3dbda46fa6c7203cb4d48e53f5f8aa9386f3070ae32518ece86ed4a518b00cff.json  query-46c4cee003387c05f3ea30903174f1411a8cbef0f13f88ee370e7fa112e1ddb6.json  query-4a848ee9f2b79dc26270aeda5e64f3b2e7bfd5ed288d9d5eb8a423f9ca98ed9d.json  query-4d96bdfaadf6642808b6b2f32e1816aba7dde21ffbb0891fa974ae74994ad04c.json  query-4f61f3248a3d3edce52377a5bbbd7f9febf8aa2b2091f29ce094d6ecbacd969d.json  query-57328de5d354470457ac7c82eb8bd20d8ba4228af0183cdf294c94c192d93abd.json  query-5a992b82a498ed3bc6d491aa9f68fdc0990152ceda62f636a8dd77cd2cff51f5.json  query-5bc2daa8310615829302035bd180af3bd1cfdb6d99600db010734aa381541191.json  query-5e4043e46c4cff96b2776b754134372c7152c07e15e7f8e84f54bf45b887dea2.json  query-669eb4049e0da67f37a5314513dbd83c69763a62c2b2081d5fecd6d66f717e82.json  query-69f20c7a26209173af7191b22528e6264c20ecf9b267001de8c41e6eddfe4588.json  query-6b7cf12f797aea33afc055159483b258531feefdb8ce1c4b2f233520336c89d2.json  query-6bece3c445b63e81dbe28944a31d0fcda3e69176134ff1f475fb2f27cd32f1e7.json  query-6e68f40a019eb264e3cd514c082b6664cf0579fc4c8b4dd6f83dd798afe0db8e.json  query-7177a7edb53828a2697853579b48bd0f2fb99517bdd174ba90bd1d73fc0306d8.json  query-74381ce0d2767899ab568b909e3b7620013bed46d92ec424ac1b50bc371767a6.json  query-74a80993124ec894dcafa2381fd7b404108d772a707bf338212750207251b3af.json  query-754c068224becc57c9dba64d431faef07c5ff1670030e7ceeb052f169422bfb7.json  query-79823d291dba6a67c7db6cf5a5147ce242cbcc1026865d6c20b87a20ec13b742.json  query-7c8ee7716a729dfacd41d09c8a1ae2a259f60a25090d5f36071c41d87c846516.json  query-7f2212dd336291c80788e7fe7e30d815ac2dd6fd57e9121459c848329cccbce3.json  query-8087b8e46b943d197cfd6306e98e9dc753b9c46ffa5e6c1417f9be75fafb1cca.json  query-82983292f46829aa4c058bb89078547d805a48c40d920d3b9ca732d4016327af.json  (+32 more)
src/: auth.rs  jwt.rs  (+8 more)
(+56 files in other folders)
