[package]
name = "medigram-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
ed25519-compact = { version = "2.1.1", features = ["ed25519"] }
once_cell = "1.20.3"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_json_canonicalizer = "0.3.0"
sqlx = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
uuid = { version = "1.14.0", features = ["serde"] }
