[package]
name = "medigram"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-compact = { version = "2.1.1", features = ["ed25519"] }
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["sync"] }
num-traits = "0.2.19"
once_cell = "1.20.3"
rand = { version = "0.9.0", features = ["alloc"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_json_canonicalizer = "0.3.0"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls", "uuid", "migrate"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "std"] }
uuid = { version = "1.14.0", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.98"
http-body-util = "0.1.3"
mime = "0.3.17"
